# fengyun

./: .gitignore  ADMIN_BACKEND_NOTES.md  PRD.md  README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  health.py
backend/app/api/routes/admin/: __init__.py  admin_users.py  article.py  audio.py  auth.py  carousel.py  image.py  logs.py  member.py  milestones.py  navigation.py  seo.py  stats.py  system.py  upload.py  video.py
backend/app/api/routes/portal/: __init__.py  articles.py  contact.py  gallery.py  home.py  members.py  milestones.py  (+4 more)
backend/app/core/: __init__.py  config.py  exceptions.py  logger.py  middleware.py  pagination.py  redis.py  responses.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  admin.py  article.py  audio.py  carousel.py  image.py  member.py  milestone.py  navigation.py  seo.py  system_config.py  video.py  visit.py
backend/app/schemas/: admin_user.py  article.py  audio.py  auth.py  base.py  carousel.py  common.py  contact.py  image.py  member.py  milestone.py  navigation.py  operation_log.py  seo.py  stats.py  system_config.py  upload.py  video.py  visit.py
backend/app/services/: __init__.py  crud_base.py  crud_entities.py  operation_log.py  stats.py  system_config.py  token_blocklist.py  upload.py
backend/scripts/: api_smoke_test.py  dev.sh  seed_demo_data.py
backend/tests/: __init__.py  test_health.py
(+58 files in other folders)
