[tool.poetry]
name = "yingge-backend"
version = "0.1.0"
description = "潮汕英歌舞非遗文化展示系统 - FastAPI 后端"
authors = ["Codex <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
sqlalchemy = "^2.0.30"
aiomysql = "^0.2.0"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
bcrypt = "^4.1.2"
loguru = "^0.7.2"
redis = "^5.0.4"
httpx = "^0.27.0"
orjson = "^3.10.3"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.3"
mypy = "^1.10.0"
types-passlib = "^1.7.7.20240327"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "N", "ASYNC"]
ignore = ["E203"]
src = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"

